Fixed spacing of form

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header nav ul li a:hover {
 /* -------  Search Form ------- */
 form {
   border: 2px solid #ff385c;
-  padding: 10px;
+  padding: 16px;
 }
 
 form label {
